--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "eslint": "^7.32.0"
   },
   "dependencies": {
+    "dayjs": "^1.10.6",
     "discord.js": "^13.1.0",
-    "fast-glob": "^3.2.7",
-    "moment": "^2.29.1",
-    "moment-duration-format": "^2.3.2"
+    "fast-glob": "^3.2.7"
   }
 }
